[tool.poetry]
name = "frelatage"
version = "0.0.8"
description = "Frelatage is a coverage-based Python fuzzing library which can be used to fuzz python code."
authors = ["Rog3rSm1th <r0g3r5@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Rog3rSm1th/Frelatage"
repository = "https://github.com/Rog3rSm1th/Frelatage"
keywords = ["frelatage", "fuzzer"]
include = [
    "LICENSE"
]
classifiers = [
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.9"
timeout-decorator = "^0.5.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
